# openafs-appliance

./: .gitignore  .pre-commit-config.yaml  README  README.md  build.sh  fake_perms_fix_symlinks.patch  openafs-appliance.vmdb  openafs-appliance.yml  pyproject.toml  samba-custom-build.notes  setup.sh
.reuse/: dep5
webauth/: pyproject.toml  webauth.py
webauth/src/webauth/: app.py
webauth/src/webauth/templates/: login.html
webauth/templates/: base.html  index.html  login.html  success.html
